# necromancy-tool

./: .gitignore  A1_Hairs_V1  A1_Hairs_V1_bad  ftests  h  necromancy-tool.cabal  stack.yaml
app/: Main.hs
src/Espa/Cli/: Native.hs
src/NecroInit/: Cli.hs
src/NecroInit/Cli/: Native.hs
test_data/: Morrowind.ini
test_data/Data Files/: 1.esp  A1H  A1V1_Hairs
