name:                necromancy-tool
version:             0.1
synopsis:            A tool for initializing "A1 Professional Necromancier" mod.
description:         A tool for initializing "A1 Professional Necromancier" mod.
homepage:            https://github.com/A1-Triard/necromancy-tool
license:             Apache
license-file:        LICENSE
author:              Warlock <internalmike@gmail.com>
maintainer:          Warlock <internalmike@gmail.com>
copyright:           2016 Warlock
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Control.Error.Extensions
                 , Data.Tes3.Disassembler
                 , Data.Tes3.Disassembler.Native
                 , Data.Tes3.Parser
                 , Data.Tes3.Parser.Native
                 , Data.Tes3.Assembler
                 , Data.Tes3.Assembler.Native
                 , NecroInit.Cli
                 , NecroInit.Cli.Native
  other-modules: Paths_necromancy_tool
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  build-depends: base >= 4.7 && < 5
               , ConfigFile
               , MissingH
               , attoparsec
               , base64-bytestring
               , binary
               , binary-ext
               , bytestring
               , conduit
               , conduit-combinators
               , containers
               , data-binary-ieee754
               , directory
               , errors
               , iconv
               , monad-loops
               , mono-traversable
               , semigroups
               , split
               , tes3
               , text
               , time
               , transformers
               , utility-ht
               , utf8-string
               , zlib
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

executable A1_Necromancy_init
  hs-source-dirs: app
  main-is: Main.hs
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  build-depends: base
               , necromancy-tool
  default-language: Haskell2010

test-suite necromancy-tool-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Tes3.Parser.Spec
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  build-depends: base
               , necromancy-tool
               , bytestring
               , transformers
               , errors
               , HUnit
               , MissingH
               , containers
               , monad-loops
               , split
               , utility-ht
               , binary
               , semigroups
               , binary-ext
               , iconv
               , utf8-string
               , base64-bytestring
               , attoparsec
               , text
               , mono-traversable
               , conduit
               , conduit-combinators
               , directory
               , data-binary-ieee754
               , zlib
               , tes3
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/A1-Triard/esp-assembler.git
