name:                necromancy-tool
version:             0.13
synopsis:            A tool for initializing "A1 Professional Necromancier" mod.
description:         A tool for initializing "A1 Professional Necromancier" mod.
homepage:            https://github.com/A1-Triard/necromancy-tool
license:             Apache
license-file:        LICENSE
author:              Warlock <internalmike@gmail.com>
maintainer:          Warlock <internalmike@gmail.com>
copyright:           2016 Warlock
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Control.Error.Extensions
                 , NecroInit.Cli
                 , NecroInit.Cli.Native
  other-modules: Paths_necromancy_tool
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  build-depends: base >= 4.7 && < 5
               , ConfigFile
               , MissingH
               , base64-bytestring
               , binary
               , binary-ext
               , bytestring
               , conduit
               , conduit-combinators
               , containers
               , data-binary-ieee754
               , directory
               , errors
               , monad-loops
               , mono-traversable
               , semigroups
               , split
               , tes3
               , text
               , time
               , transformers
               , utility-ht
               , utf8-string
               , vector
               , zlib
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

executable A1_Necromancy_init
  hs-source-dirs: app
  main-is: Main.hs
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  build-depends: base
               , necromancy-tool
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/A1-Triard/esp-assembler.git
